Disable notice UI
The config_userNoticeUiService specifies the notice UI
that will be launched when a user starts a car or
performs user switching. Disable it for now.

Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/overlay/packages/services/Car/service/res/values/config.xml
+++ b/overlay/packages/services/Car/service/res/values/config.xml
@@ -34,4 +34,5 @@
         <!--<item>car_evs_service</item> -->
         <item>car_telemetry_service</item>
     </string-array>
+    <string name="config_userNoticeUiService" translatable="false"/>
 </resources>
